--- a/authentication-lab/templates/add_tweet.html
+++ b/authentication-lab/templates/add_tweet.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     Great Job!
+    <form method="post" action="/add_tweet">
+        <input type="text" name = "tweet">
+        <input type = "text" name = "title">
+        <input type="submit"/></form>
+    {{tweet}}
     <a href = "/"><button>Sign Out</button></a>
 </body>
 </html>
