--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -31,6 +31,27 @@
                 <input type="password"  name="password" minlength="6">
             </div>
         </div>
+
+        <div>
+            <label>full name</label>
+            <div>
+                <input type="text"  name="full_name"  required>
+            </div>  
+        </div>
+
+        <div>
+            <label>username</label>
+            <div>
+                <input type="text"  name="username" required>
+            </div>
+        </div>
+
+        <div>
+            <label>bio</label>
+            <div>
+                <input type="text"  name="bio"required>
+            </div>
+        </div>
         
         <!-- Button -->
         <div>
@@ -38,6 +59,7 @@
         </div>
     </form>
     <br>
+    {{error}}
     <a href="/"><button>signin</button></a>
 </body>
 </html>
