--- a/authentication-lab/templates/signin.html
+++ b/authentication-lab/templates/signin.html
@@ -17,6 +17,21 @@
         </p>
 
         <!-- Email -->
+            <label>firstname*</label>
+            <div>
+                <input type="firstname"  name="firstname" id="firstnamestr" required>
+            </div>
+        </div>
+
+        <!-- Email -->
+        <div>
+            <label>username*</label>
+            <div>
+                <input type="username"  name="username" id="usernamestr" required>
+            </div>
+        </div>
+
+        <!-- Email -->
         <div>
             <label>Email address*</label>
             <div>
@@ -29,6 +44,14 @@
             <label>Password*</label>
             <div class="input-group">
                 <input type="password"  name="password" minlength="6">
+            </div>
+        </div>
+        
+                <!-- Email -->
+        <div>
+            <label>bios*</label>
+            <div>
+                <input type="bio"  name="bio" id="biostr" required maxlength = "280">
             </div>
         </div>
         
