--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -15,6 +15,21 @@
         <p >
             Please fill up your information below to sign up.
         </p>
+                <!-- Email -->
+        <div>
+            <label>firstname*</label>
+            <div>
+                <input type="firstname"  name="firstname" id="firstnamestr" required>
+            </div>
+        </div>
+
+        <!-- Email -->
+        <div>
+            <label>username*</label>
+            <div>
+                <input type="username"  name="username" id="usernamestr" required>
+            </div>
+        </div>
 
         <!-- Email -->
         <div>
@@ -31,35 +46,21 @@
                 <input type="password"  name="password" minlength="6">
             </div>
         </div>
-
-        <div>
-            <label>full name</label>
-            <div>
-                <input type="text"  name="full_name"  required>
-            </div>  
-        </div>
-
-        <div>
-            <label>username</label>
-            <div>
-                <input type="text"  name="username" required>
-            </div>
-        </div>
-
-        <div>
-            <label>bio</label>
-            <div>
-                <input type="text"  name="bio"required>
-            </div>
-        </div>
         
+                <!-- Email -->
+        <div>
+            <label>bios*</label>
+            <div>
+                <input type="bio"  name="bio" id="biostr" required maxlength="280">
+            </div>
+        </div>
+
         <!-- Button -->
         <div>
             <input type="submit"/>
         </div>
     </form>
     <br>
-    {{error}}
     <a href="/"><button>signin</button></a>
 </body>
 </html>
